fix spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,6 +5,7 @@
 
 .project-item {
     margin-bottom: 20px;
+    margin-top: 20px;
 
     header {
         padding: 10px;
